# asar-xarray

./: .flake8  .gitattributes  .gitignore  .releaserc  CHANGELOG.md  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml  docstyle.yml  release.yml
asar_xarray/: __init__.py  asar.py  derived_subdatasets_metadata.py  envisat_direct.py  general_metadata.py  main.py  reader.py  records_metadata.py  utils.py  xarray_backends.py
asar_xarray/aux/ASAR_Auxiliary_Files/: ASAR Aux file list.txt  ASAR_Aux_file_list.txt
asar_xarray/aux/ASAR_Auxiliary_Files/ASA_CON_AX/: ASA_CON_AXVIEC20030703_000000_20020301_000000_20020815_000000  ASA_CON_AXVIEC20030909_000000_20020815_000000_20021017_130000  ASA_CON_AXVIEC20120626_153730_20021017_130000_20030601_000000  ASA_CON_AXVIEC20120626_154436_20050916_195733_20070204_165113  ASA_CON_AXVIEC20120626_155037_20070204_165113_20101231_000000
asar_xarray/aux/ASAR_Auxiliary_Files/ASA_INS_AX/: ASA_INS_AXVIEC20021018_095608_20020613_092400_20020815_131000  ASA_INS_AXVIEC20101222_143805_20101022_000000_20141231_235959  ASA_INS_AXVIEC20110124_114858_20101228_112000_20141231_235959  ASA_INS_AXVIEC20170504_152600_20021030_100500_20030211_000000
asar_xarray/aux/ASAR_Auxiliary_Files/ASA_XCA_AX/: ASA_XCA_AXVIEC20070130_105508_20020413_000000_20030211_000000  ASA_XCA_AXVIEC20070130_110635_20030211_000000_20030601_000000  ASA_XCA_AXVIEC20070130_111029_20030601_000000_20030804_000000  ASA_XCA_AXVIEC20070130_111449_20040412_000000_20050101_000000  ASA_XCA_AXVIEC20070215_184408_20050916_195733_20070204_165113  ASA_XCA_AXVIEC20090311_104037_20070204_165113_20080731_235959  ASA_XCA_AXVIEC20100315_123052_20090501_000000_20110101_000000  ASA_XCA_AXVIEC20100608_122638_20100311_094400_20100317_120409  ASA_XCA_AXVIEC20100608_123419_20100317_120410_20110101_000000  ASA_XCA_AXVIEC20101111_113830_20100601_000000_20141231_000000  ASA_XCA_AXVIEC20120126_110323_20110607_000000_20141231_000000
asar_xarray/auxiliary/ASAR_Auxiliary_Files/: ASAR_Aux_file_list.txt
asar_xarray/auxiliary/ASAR_Auxiliary_Files/ASA_CON_AX/: ASA_CON_AXVIEC20120626_153045_20030601_000000_20050916_195733  ASA_CON_AXVIEC20120626_160512_20100317_120410_20141231_000000  ASA_CON_AXVIEC20120626_163200_20100311_094400_20100317_120409  ASA_CON_AXVIEC20120627_074358_20101027_215740_20141231_000000
asar_xarray/auxiliary/ASAR_Auxiliary_Files/ASA_INS_AX/: ASA_INS_AXVIEC20020308_112323_20020301_000000_20021231_000000  ASA_INS_AXVIEC20020425_093155_20020413_000000_20021231_000000  ASA_INS_AXVIEC20090525_115408_20070307_060000_20090428_095959  ASA_INS_AXVIEC20170504_152900_20021017_162400_20021030_100500
asar_xarray/auxiliary/ASAR_Auxiliary_Files/ASA_XCA_AX/: ASA_XCA_AXVIEC20020308_112533_20020301_000000_20021231_000000  ASA_XCA_AXVIEC20070130_111245_20030804_000000_20040412_000000  ASA_XCA_AXVIEC20110526_075734_20101027_215740_20141231_000000  ASA_XCA_AXVIEC20120607_091724_20120127_000000_20141231_000000  ASA_XCA_AXVIEC20161028_150126_20050101_000000_20050914_080040
asar_xarray/auxiliary/ASAR_Auxiliary_Files/ASA_XCH_AX/: ASA_XCH_AXVIEC20101222_143057_20020301_000000_20141231_000000
docs/source/: asar_xarray.rst  conf.py  index.rst  modules.rst
tests/: conftest.py  test_asar.py  test_derived_subdatasets_metadata.py  test_general_metadata.py  test_main.py  test_reader.py  test_records_metadata.py  test_xaray_backends.py  utils.py
tests/resources/: ASA_IMS_1PNESA20040109_194924_000000182023_00157_09730_0000.N1
