[project]
name = 'asar_xarray'
version = "v1.3.1"
description = 'Synthetic Aperture Radar (SAR) Level-1 python mapper of ESR/ASAR products.'
authors = [
    { name = 'Anton Perepelenko', email = 'anton.perepelenko@cgi.com' },
    { name = 'Priit Pender', email = 'priit@alloca.ee' }
]
maintainers = [
    { name = 'Anton Perepelenko', email = 'anton.perepelenko@cgi.com' },
    { name = 'Priit Pender', email = 'priit@alloca.ee' }
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS'
]
readme = 'README.md'
license = { text = 'Apache-2.0' }
keywords = ['ASAR', 'ENVISAT', 'xarray', 'earth-observation', 'remote-sensing', 'radar', 'satellite-imagery', 'sar',
    'synthetic-aperture-radar']
requires-python = '>=3.12'
dependencies = [
    'xarray>=2025.1.0',
    'requests>=2.32.0',
    'gdal>=3.10.0',
    'numpy>=2.2.0',
    'boto3>=1.37.0',
    'boto3-stubs>=1.37.0',
    'loguru>=0.7.0'
]

[project.optional-dependencies]
test = [
    'pytest>=8.3.0',
    'lxml>=5.3.0',
    'mypy>=1.15.0',
    'pytest-stub>=1.1.0'
]

[project.urls]
repository = 'https://github.com/Achaad/asar-xarray'
'Bug Tracker' = 'https://github.com/Achaad/asar-xarray/issues'


[project.entry-points.'xarray.backends']
asar = 'asar_xarray.xarray_backends:AsarBackend'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.semantic_release]
version_source = "master"
branch = "master"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version:tf"]
version_variables = ["docs/conf.py:release:tf"]
upload_to_pypi = true
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version}"
token = { env = "GITHUB_TOKEN" }
major_on_zero = true
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = false
ignore_merge_commits = false